# CudaPlayground

./: .gitignore  CMakeLists.txt  README.md
docs/: integradores.md  make-doc.md  roadmap.md
include/: vec2.hpp  world.hpp
include/physics/: body.hpp  world.hpp
include/sim/: collisionSystem.hpp  movementSystem.hpp  systemManager.hpp
src/: body.cpp  main.cpp  vec2.cpp  world.cpp
src/physics/: body.cpp
src/sim/: collisionSystem.cpp  movementSystem.cpp  systemManager.cpp
tests/: test_collisions.cpp  test_integrator_stability.cpp  test_random_inicialization.cpp
tests/utilities/: test_helpers.hpp
